UI change, fix building, make the plugin grab the file from github to get the newest version n stuff